--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arhan-kamra.github.io/ReactJS-Portfolio/",
+  "homepage": "https://arhan-kamra.github.io/reactjs-proj/",
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.2",
