--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://arhan-kamra.github.io/reactjs-proj/",
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -42,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "node-sass": "npm:sass@^1.49.9",
     "postcss": "^8.4.8",
